# 3d-graphics-engine

./: .gitignore  3d-graphics-engine.cpp  3d-graphics-engine.vcxproj  3d-graphics-engine.vcxproj.filters  CMakeLists.txt  README.md
src/: main.cpp
src/math/: matrix.cpp  matrix.h  vector.cpp  vector.h
x64/Debug/: 3d-graphics-engine.exe.recipe  vc143.idb
x64/Debug/3d-graph.45f5962a.tlog/: 3d-graphics-engine.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
